src/components/Last-Section/Last-Section.css
.Last-Section {
  background-color: #1f1e1e;
  width: 100%;
  height: 50vh;
}
.Form {
  width: 80%;
  height: 300px;
  margin-left: 10%;
  margin-right: 20%;
  text-align: center;
}

.Subscribe {
  padding-top: 50px;
  font-size: 30px;
  color: white;
}

.Subscribe-button {
  width: 123px;
  height: 45px;
  background: #407fff;
  color: white;
  font-size: 16px;
  box-shadow: 0px 16px 4px rgba(0, 0, 0, 0.25);
  border-radius: 60px;
}
.Subscribe-form {
  width: 400px;
  height: 45px;
  padding-left: 20px;

  color: black;
  font-size: 16px;
  border-radius: 60px;
}

